# dataeng

./: Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: main.yaml
dataeng/: __main__.py  main.py
resources/: compose_mysql.yaml
scripts/: schema.sql
